--- a/README.org
+++ b/README.org
@@ -4,7 +4,15 @@ Support:
 
 - Emacs version: 26.3 /more version maybe support, but I don't test/
 - OS: macOS, Ubuntu 18.04/20.04
-- feature:
-  + [[https://github.com/jwiegley/use-package][use-package]] all third party package use /use-package/ form. => lazy loading, faster (*start up < 1s*)
-  + Programming IDE: Web(ES2015+, JSX, React, CSS/LESS ..), Go, Python
-- Emacs tutorial: https://www.zhangjiee.com/topic/emacs/index.html
+- Feature:
+  + [[https://github.com/jwiegley/use-package][use-package]] all third party package use /use-package/ form => lazy loading, faster (*start up < 1s*)
+  + Comfortable/Efficient key binding
+  + Support:
+	- Web(ES2015+, JSX, React, CSS/LESS ..)
+	- Go IDE
+	- Python IDE
+	- markdown
+	- org, gtd, toc-org, publish(build web site)
+	- config file: sql, Dockerfile, yaml, nginx
+
+Emacs tutorial(just support chinese): https://www.zhangjiee.com/topic/emacs/index.html
