--- a/README.org
+++ b/README.org
@@ -1,4 +1,8 @@
-* Emacs config for me (simple, clean, fast)
+* My Emacs config (simple, clean, fast)
+
+#+CAPTION: emacs screen(theme: "leuven")
+#+NAME: screen.png
+[[./screen.png]]
 
 Support:
 
@@ -16,3 +20,5 @@ Support:
 	- config file: sql, Dockerfile, yaml, nginx
 
 Emacs tutorial(just support chinese): https://www.zhangjiee.com/topic/emacs/index.html
+
+*Note:* No any /vi(m)/ extension(plugin or key binding), I'm not a Vim user, thinking by emacs way.
