--- a/README.org
+++ b/README.org
@@ -9,28 +9,35 @@
 - Emacs version: 26.3
 - OS: macOS, Ubuntu 18.04/20.04
 - Feature:
-  + [[https://github.com/jwiegley/use-package][use-package]] all third party package use /use-package/ form => lazy loading, faster (*start up < 1s*)
+  + [[https://github.com/jwiegley/use-package][use-package]] all third party package use /use-package/ form => lazy loading, faster /start up < 1s/
   + Comfortable/Efficient key binding
-  + Support:
-	- Web(ES2015+, JSX, React, CSS/LESS ..)
-	- Go IDE
-	- Python IDE
-	- markdown
-	- org, gtd, toc-org, publish(build web site)
-	- config file: sql, Dockerfile, yaml, nginx
+- Coding:
+  + Web (ES2015+, JSX, React, CSS/LESS ..)
+  + Go IDE
+  + Python IDE
+- Other:
+  + markdown
+  + org, gtd, toc-org, publish(build web site)
+  + config file: sql, Dockerfile, yaml, nginx
 
-*Note:* No any /vi(m)/ extension(plugin or key binding), I'm not a Vim user, thinking by emacs way.
+*Note:*
+
+- No any /vi(m)/ extension(plugin or key binding), I'm not a Vim user, thinking by emacs way.
+- I /don't/ use GUI, just terminal
 
 ** Install
 
 1. =git clone https://github.com/zhangjie2012/_emacs.d.git .emacs.d=
 2. open =emacs=, will auto install all package
 
-*for chinese user*, in =lisp/init-package.el= files:
+*for chinese user*, in =lisp/init-package.el= files: _set http proxy_, or _use qinghua mirror_ 。
 
-- set http proxy
-- use qinghua mirror
+*** Dependencies
 
+- search use [[https://github.com/ggreer/the_silver_searcher][ag]], fast than grep
+- coding IDE need:
+  - language server (LSP), like gopls, more see [[https://emacs-lsp.github.io/lsp-mode/page/languages/][lsp-mode#Languages]]
+  - syntax checker, like pylint/eslint, more see [[https://www.flycheck.org/en/latest/languages.html#flycheck-languages][flycheck#Supported Languages]]
 
 ** Tutorial
 
