--- a/README.org
+++ b/README.org
@@ -4,106 +4,4 @@
 #+NAME: screen.png
 [[./screen.png]]
 
-Master only support Emacs 27+, 26 version checkout =emacs-26= branch.
-
-** Support
-
-   - Emacs version: 27.1 [fn:1]
-   - OS: macOS, Ubuntu 18.04/20.04
-   - Feature:
-	 + [[https://github.com/jwiegley/use-package][use-package]] all third party package use /use-package/ form => lazy loading, faster /start up < 1s/
-	 + Comfortable/Efficient key binding
-   - Coding:
-	 + Web (ES2015+, JSX, React, CSS/LESS ..)
-	 + Go IDE
-	 + Python IDE
-   - Other:
-	 + markdown
-	 + org, gtd, toc-org, publish(build web site)
-	 + config file: sql, Dockerfile, yaml, nginx
-
-** Install
-
-   1. =git clone https://github.com/zhangjie2012/_emacs.d.git .emacs.d=
-   2. open =emacs=, will auto install all package
-
-   *for chinese user*, open =init.el= _set http proxy_, or _use qinghua mirror_ .
-
-   If appear package not found error message, try =M-x package-refresh-content= and reopen emacs.
-
-*** Dependencies
-
-	- search use [[https://github.com/ggreer/the_silver_searcher][ag]], fast than grep
-	- coding IDE need:
-	  - language server (LSP), like gopls, more see [[https://emacs-lsp.github.io/lsp-mode/page/languages/][lsp-mode#Languages]]
-	  - syntax checker, like pylint/eslint, more see [[https://www.flycheck.org/en/latest/languages.html#flycheck-languages][flycheck#Supported Languages]]
-
-** Key Binding
-
-   No any /vi(m)/ extension(plugin or key binding), I'm not a Vim user, thinking by emacs way.
-
-   Leader key include =M-s=, =<f9>=, =<f8>=, easy remember.
-
-   - =M-s= most for left hand start, right hand end;
-   - =<f9>= most for right hand start, left hand end;
-   - =<f8>= only for =projectile= package;
-
-*** =M-s=
-
-	- =.= swiper-isearch-thing-at-point
-	- =;= mc/mark-all-symbols-like-this-in-defun
-	- =<= mc/mark-previous-like-this
-	- =>= mc/mark-next-like-this
-	- =[= counsel-ag
-	- =]= counsel-git
-	- =f= er/mark-defun
-	- =i= avy-goto-word-1
-	- =j= avy-goto-line
-	- =k= avy-copy-line
-	- =l= display-line-numbers-mode
-	- =m= er/mark-comment
-	- =o= occur
-	- =P= er/mark-inside-pairs
-	- =p= er/mark-outside-pairs
-	- =Q= er/mark-inside-quotes
-	- =q= er/mark-outside-quotes
-	- =s= er/mark-symbol
-	- =t= ace-swap-window
-
-*** =<f9>=
-
-	- =0= delete window
-	- =1= delete other windows
-	- =2= split-window-below
-	- =3= split-window-horizontally
-	- =a= backward-sentence
-	- =b= ivy-switch-buffer
-	- =c= open shell
-	- =d= kill-whole-line
-	- =f= counsel-find-file
-	- =g a= align-regexp
-	- =g d= insert-current-date-time
-	- =g g= git gutter mode
-	- =g l= search in current dir and sub dir
-	- =g r= search in current dir no sub dir
-	- =l= flycheck list error
-	- =m= imenu
-	- =n= display-fill-column-indicator-mode
-	- =w= save buffer
-	- =x= counsel-M-x
-
-*** <f8>
-
-	checkout projectile doc: https://docs.projectile.mx/projectile/usage.html#interactive-commands.
-
-*** Other
-
-	=M-\*= jump match paren
-
-** Tutorial
-
-   Emacs tutorial(just support chinese): https://www.zhangjiee.com/topic/emacs/index.html
-
-* Footnotes
-
-[fn:1] Upgraded to 27 config, refer to https://gitlab.com/protesilaos/dotfiles/-/tree/master/emacs/.emacs.d
+Document: https://www.zhangjiee.com/topic/emacs/index.html
